--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,7 @@
 spring.application.name: index
 
+spring.mustache.suffix: .html
+
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/mydb
